--- a/new-app/Dockerfile
+++ b/new-app/Dockerfile
@@ -19,4 +19,4 @@ COPY . .
 EXPOSE 80
 
 # Define the command to run the application
-CMD ["gunicorn", "-w", "4", "-b", "0.0.0.0:80", "app:app"]
+CMD ["gunicorn", "-w", "4", "-b", "0.0.0.0:8000", "server:app"]
